# hask-fagin

./: ChangeLog.md  Makefile  README.md  TODO  fagin.cabal  profile.sh
benchmark/: Main.hs
etc/: config-template.yml
executable/: Main.hs
sample-data/: README.md  micro.gff3  short.gff3
sample-data/minimal/: 1_simple.gff3  3_monoexonic.gff3  4_weird-naming.gff3
sample-data/pathological/: intein.gff3  operon.gff3  polycistronic-transcript.gff3  single-exon-genes_A.gff3  single-exon-genes_B.gff3  single-exon-genes_C.gff3  splicing-variants.gff3  transpliced-transcript_A.gff3  transpliced-transcript_B.gff3  with-fasta.gff3
src/: Fagin.hs
src/Fagin/: BioSeq.hs  Gff.hs  IO.hs  Interval.hs  Prelude.hs  Report.hs
